logs/Slang/generic/union/union_test_0.sv.log
name: union_test_0
description: Test
should_fail: 0
tags: 7.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/union/union_test_0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/union/union_test_0.sv:7:15: error: forward typedef 'myunion_fwd' does not resolve to a data type
typedef union myunion_fwd;
              ^
